[tool.poetry]
name = "repl_python3_pyrdle"
version = "0.1.0"
description = ""
authors = ["ThomasLoupe <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
sitechantment = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
